objects/Deal_Party__c.object
<CustomObject>
    <customHelpPage>General_Deal_Management</customHelpPage>
    <fields>
        <fullName>Asset_Manager__c</fullName>
        <formula>ISPICKVAL(Deal__r.Relationship_Type_picklist__c, &quot;Asset Manager&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collective_Investment_Scheme_Manager__c</fullName>
        <formula>ISPICKVAL(Deal__r.Relationship_Type_picklist__c, &quot;Collective Investment Scheme Manager&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collective Investment Scheme Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conditions_Monitored_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conditions Monitored By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Deal__c</field>
                <operation>equals</operation>
                <valueField>advpm__Participant__c.advpm__Matter__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>advpm__Participant__c</referenceTo>
        <relationshipLabel>Deal Parties</relationshipLabel>
        <relationshipName>Deal_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counterparty__c</fullName>
        <formula>ISPICKVAL(Deal__r.Relationship_Type_picklist__c, &quot;Counterparty&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counterparty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Deal Parties</relationshipLabel>
        <relationshipName>Deal_Parties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalDealPartyId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalDealPartyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Managers__c</fullName>
        <label># Fund Managers</label>
        <summaryFilterItems>
            <field>Hedge_Fund_Party__c.Hedge_Fund_Party_Type__c</field>
            <operation>equals</operation>
            <value>Fund Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>Hedge_Fund_Party__c.Deal_Party__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Investment_Managers__c</fullName>
        <label># Investment Managers</label>
        <summaryFilterItems>
            <field>Hedge_Fund_Party__c.Hedge_Fund_Party_Type__c</field>
            <operation>equals</operation>
            <value>Investment Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>Hedge_Fund_Party__c.Deal_Party__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Party_B__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Party B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Party_Type__c</fullName>
        <label>Party Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Collateral Manager</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>ECA</fullName>
                </value>
                <value>
                    <fullName>Forward Sale Purchaser</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Rating Agency</fullName>
                </value>
                <value>
                    <fullName>Relevant Party</fullName>
                </value>
                <value>
                    <fullName>Seller</fullName>
                </value>
                <value>
                    <fullName>Storage Operator</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receive_Notification__c</fullName>
        <formula>Conditions_Monitored_By__r.Receive_Notifications__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receive Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_SDS_ID__c</fullName>
        <formula>Relationship__r.SDS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship SDS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Guarantor</fullName>
                </value>
                <value>
                    <fullName>Asset Manager</fullName>
                </value>
                <value>
                    <fullName>Bank Branch</fullName>
                </value>
                <value>
                    <fullName>Collective Investment Scheme Manager</fullName>
                </value>
                <value>
                    <fullName>Counterparty</fullName>
                </value>
                <value>
                    <fullName>Counterparty Branch</fullName>
                </value>
                <value>
                    <fullName>Cross Guarantor</fullName>
                </value>
                <value>
                    <fullName>Custodian</fullName>
                </value>
                <value>
                    <fullName>Disclosed Principal</fullName>
                </value>
                <value>
                    <fullName>Qualified Investor Hedge Fund</fullName>
                </value>
                <value>
                    <fullName>Retail Hedge Fund</fullName>
                </value>
                <value>
                    <fullName>Security Provider</fullName>
                </value>
                <value>
                    <fullName>Specified Entity Bank</fullName>
                </value>
                <value>
                    <fullName>Specified Entity Counterparty</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Parties</relationshipLabel>
        <relationshipName>Deal_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_User__c</fullName>
        <label>Source User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supporting_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supporting Agreement</label>
        <referenceTo>Supporting_Agreement__c</referenceTo>
        <relationshipLabel>Deal Parties</relationshipLabel>
        <relationshipName>Deal_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hAuto_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Created?</label>
        <type>Checkbox</type>
    </fields>
    <label>Deal Party</label>
    <nameField>
        <displayFormat>DP-{00000}</displayFormat>
        <label>Deal Party #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Parties</pluralLabel>
    <recordTypes>
        <fullName>CNSG_Deal_Party</fullName>
        <active>true</active>
        <description>Record Type used for CNSG Deal Parties</description>
        <label>CNSG Deal Party</label>
    </recordTypes>
    <recordTypes>
        <fullName>TMG_Deal_Party</fullName>
        <active>true</active>
        <description>Record Type used for TMG Deal Parties</description>
        <label>TMG Deal Party</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ECA_Part_Type_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Party_Type__c , &quot;ECA&quot;),
 Deal__r.ECA_backed__c = FALSE)</errorConditionFormula>
        <errorMessage>Please ensure that ECA Party Type can only be selected if the ECA Backed is checked on the Deal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_No_CounterP_or_CISC_Added</fullName>
        <active>true</active>
        <description>Limits CNSG Team from adding a Counterparty and Collective Investment Scheme Manager as a Deal Party excluding the auto-created Deal Parties from Matter creation</description>
        <errorConditionFormula>IF(NOT(ISCHANGED(Relationship__c)), AND((Deal__r.Count_Collective_Investment_Scheme_Man__c = 1 ||  Deal__r.Count_Counterparty__c = 1 ||  Deal__r.Count_Asset_Manager__c = 1), ISPICKVAL(Relationship_Type__c, &quot;Counterparty&quot;) || ISPICKVAL(Relationship_Type__c, &quot;Collective Investment Scheme Manager&quot;)), false)</errorConditionFormula>
        <errorMessage>You are not allowed to add an additional Counterparty or Collective Investment Scheme Manager</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Libra_Counterparty_Branch_Validation</fullName>
        <active>true</active>
        <description>Validation to limit users from linking counterparty branches when the market transaction relationship type = &quot;collective scheme investment manager&quot; or &quot;asset manager&quot;</description>
        <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c, &quot;Counterparty Branch&quot;) , ISPICKVAL(Deal__r.Relationship_Type_picklist__c, &quot;Asset Manager&quot;) || ISPICKVAL(Deal__r.Relationship_Type_picklist__c,&quot;Collective Investment Scheme Manager&quot;))</errorConditionFormula>
        <errorMessage>A Deal Party of this type cannot be added to an Agreement created for an Asset Manager or a Collective Investment Scheme Manager</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Libra_Counterparty_Deal_P</fullName>
        <active>true</active>
        <description>Validation to limit users from a adding a disclosed principal deal party when the matter relationship is of counterparty relationship type</description>
        <errorConditionFormula>AND(Counterparty__c = TRUE, ISPICKVAL(Relationship_Type__c ,&quot;Disclosed Principal&quot;))</errorConditionFormula>
        <errorMessage>You cannot add a Disclosed Principal as a deal party to a Counterparty relationship.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Libra_Hedge_Funds_Validation_for_MT</fullName>
        <active>true</active>
        <description>Validation to limit users from linking retail hedge fund and qualified investor hedge funds when the market transaction relationship type = &quot;counterparty&quot; or &quot;asset manager&quot;.</description>
        <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c, &quot;Retail Hedge Fund&quot;) || ISPICKVAL(Relationship_Type__c, &quot;Qualified Investor Hedge Fund&quot;), ISPICKVAL(Deal__r.Relationship_Type_picklist__c, &quot;Asset Manager&quot;) || ISPICKVAL(Deal__r.Relationship_Type_picklist__c,&quot;Counterparty&quot;))</errorConditionFormula>
        <errorMessage>You cannot add Asset Manager or Counterparty relationship to this type of Deal Party.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Libra_Only_One_Fund_Manager_Allowed</fullName>
        <active>true</active>
        <errorConditionFormula>Fund_Managers__c &gt; 1</errorConditionFormula>
        <errorMessage>You are only allowed to link one Fund Manager to the Deal Party</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Libra_Validate_Hedge_Fund_Parties</fullName>
        <active>true</active>
        <description>Only allowed to add Hedge Fund Parties to Deal Parties of type &quot; Qualified Investor Hedge Fund&quot; and &quot;Retail Hedge Fund&quot;</description>
        <errorConditionFormula>IF(AND(ISPICKVAL(Relationship_Type__c , &apos;Qualified Investor Hedge Fund&apos;) == FALSE , ISPICKVAL(Relationship_Type__c , &apos;Retail Hedge Fund&apos;)== FALSE ,OR( Fund_Managers__c &gt; 0,  Investment_Managers__c  &gt; 0)), TRUE, FALSE)</errorConditionFormula>
        <errorMessage>You are not allowed to link a Hedge Fund Party to this Deal Party, please contact your Salesforce Administrator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TMG_Must_be_a_TA_or_TM_role</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISBLANK(Conditions_Monitored_By__c)),
   Deal__r.RecordType.DeveloperName = &quot;Deal&quot;,
   NOT(  
      INCLUDES(Conditions_Monitored_By__r.advpm__Role__c, &quot;Transaction Administration&quot;)
      ),
    NOT(  
      INCLUDES(Conditions_Monitored_By__r.advpm__Role__c, &quot;Transaction Management&quot;)
      ),
 NOT(  
      INCLUDES(Conditions_Monitored_By__r.advpm__Role__c, &quot;Agency&quot;)
      ),
    NOT(  
      INCLUDES(Conditions_Monitored_By__r.advpm__Role__c, &quot;SPV&quot;)
      )
)</errorConditionFormula>
        <errorDisplayField>Conditions_Monitored_By__c</errorDisplayField>
        <errorMessage>You must select a participant with the role of &quot;Transaction Management&quot; or &quot;Transaction Administration&quot; or &quot;SPV&quot; or &quot;Agency&quot; to monitor conditions for a borrower.</errorMessage>
    </validationRules>
</CustomObject>